--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "bootstrap": "^4.3.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-icons": "^3.7.0",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "react-slick": "^0.24.0",
+    "react-spinners": "^0.5.13",
     "reactstrap": "^8.0.1",
     "slick-carousel": "^1.8.1"
   },
