--- a/package.json
+++ b/package.json
@@ -4,19 +4,21 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "howler": "^2.1.3",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-h5-audio-player": "^2.2.1",
     "react-icons": "^3.7.0",
+    "react-redux": "^7.1.1",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
+    "react-scripts": "3.1.2",
     "react-slick": "^0.24.0",
     "react-spinners": "^0.5.13",
     "reactstrap": "^8.0.1",
-    "slick-carousel": "^1.8.1",
-    "react-redux": "^7.1.1",
-    "react-scripts": "3.1.2",
     "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
